# src/modules/example/handler/handle_example_list.go
@@ -4,19 +4,19 @@ import (
 	"skeleton/pkg/response"
 	"skeleton/src/modules/example/transformer"
 
-	"github.com/gofiber/fiber/v2"
+	"github.com/labstack/echo/v4"
 )
 
-// GetExampleHandler func
+// ListsExample func
 // @securityDefinitions.basic BearerAuth
 // @Summary Get list of example.
 // @Description Get list of example.
 // @Produce  application/json
 // @Success 200 {object} response.Response{data=[]dto.ExampleResponse} "success"
 // @Failure 500 {object} response.Response "internal error"
-// @Router /v1/example [get]
+// @Router /api/example/v1/lists [get]
 // @Tags Examples
-func (p *ExampleHandler) GetExampleHandler(c *fiber.Ctx) error {
+func (p *ExampleHandler) ListsExample(c echo.Context) error {
 	examples := p.ExampleRepository.GetAll()
 	exampleResponses := transformer.TransformBatchExample(examples)
 	return response.OK(c, "Get Example Lists", exampleResponses)
