# src/modules/example/handler/handle_example_store.go
@@ -5,22 +5,22 @@ import (
 	"skeleton/src/modules/example/dto"
 	"skeleton/src/modules/example/transformer"
 
-	"github.com/gofiber/fiber/v2"
+	"github.com/labstack/echo/v4"
 )
 
-// PostCreateExample func
+// StoreExample func
 // @securityDefinitions.basic BearerAuth
-// @Summary Create new example data.
-// @Description Create new example data.
+// @Summary Store new example data.
+// @Description Store new example data.
 // @Produce  application/json
 // @Param data body dto.ExampleRequest true "Example request"
 // @Success 200 {object} response.Response{data=dto.ExampleResponse} "success"
 // @Failure 500 {object} response.Response "internal error"
-// @Router /v1/example [post]
+// @Router /api/example/v1/store [post]
 // @Tags Examples
-func (p *ExampleHandler) PostCreateExample(c *fiber.Ctx) error {
+func (p *ExampleHandler) StoreExample(c echo.Context) error {
 	request := dto.ExampleRequest{}
-	err := c.BodyParser(&request)
+	err := c.Bind(&request)
 	if err != nil {
 		return response.Error(c, err, 400)
 	}
